# backtesting_system

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/backtester_cli/: CMakeLists.txt  main.cpp
include/: Engine.hpp
include/backtester/config/: PortfolioConfig.hpp  RiskManagerConfig.hpp
include/backtester/core/: Engine.hpp  EventQueue.hpp
include/backtester/data_feed/: DataFeed.hpp
include/backtester/enums/: Direction.hpp  EventType.hpp  FillAction.hpp  OrderRole.hpp  OrderStatus.hpp  OrderType.hpp  PositionStatus.hpp
include/backtester/events/: Event.hpp  FillEvent.hpp  MarketEvent.hpp  OrderEvent.hpp  SignalEvent.hpp
include/backtester/models/: Instrument.hpp  MarketData.hpp  Order.hpp  Position.hpp  Signal.hpp
include/backtester/portfolio/: Portfolio.hpp
include/backtester/risk_manager/: RiskManager.hpp
include/backtester/strategy/: Strategy.hpp
include/backtester/utils/: CSVFileLoader.hpp  PnLCalculator.hpp
include/enums/: EventType.hpp
include/events/: Event.hpp
include/models/: MarketData.hpp
include/utils/: CSVFileLoader.hpp
src/: CMakeLists.txt  main.cpp
src/core/: Engine.cpp
src/data_feed/: DataFeed.cpp
src/enums/: Direction.cpp  EventType.cpp  OrderType.cpp
src/events/: Event.cpp  MarketEvent.cpp
src/models/: MarketData.cpp  Order.cpp
src/portfolio/: Portfolio.cpp
src/risk_manager/: RiskManager.cpp
src/utils/: CSVFileLoader.cpp  PnLCalculator.cpp
tests/: CMakeLists.txt  test_csv_file_loader.cpp  test_data_feed.cpp  test_event_queue.cpp  test_order.cpp  test_pnl_calculator.cpp  test_portfolio.cpp  test_position.cpp  test_risk_manager.cpp  test_signal.cpp  test_strategy.cpp  test_utils.hpp
